fixed little topbar margin and active class on mobile and desktop screen size

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,11 @@ body {
   color: #444444;
 }
 
+/* this class will be added to the HTML body when nenu bar is open */
+.no-scroll {
+  overflow: hidden !important;
+}
+
 a {
   text-decoration: none;
   color: #0880e8;
@@ -74,6 +79,17 @@ p {
 .topbar.topbar-scrolled {
   top: -60px;
 }
+
+@media (max-width: 991px) {
+  .topbar .topbar-emails {
+    margin-bottom: 3px;
+  }
+  
+  .topbar .topbar-phones {
+    margin-top: 3px;
+  }
+}
+
 
 @media (max-width: 991px) {
   .topbar .contact-info {
